apps/gitea/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: gitea-http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: gitea-ssh
      port: 22
      protocol: TCP
      targetPort: 22
