apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
spec:
  tls:
    - hosts:
        - git.iam-demo.test
      secretName: iam-demo-certs-tls
  rules:
    - host: git.iam-demo.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
